fix the client-side accessing node.js modules

--- a/api-docs/config/app-config.json
+++ b/api-docs/config/app-config.json
@@ -1,12 +1,12 @@
 {
   "features": {
     "auth": {
-      "enabled": false,
+      "enabled": true,
       "provider": "github",
       "whitelist": "whitelist.txt"
     },
     "theme": {
-      "darkMode": true,
+      "darkMode": false,
       "colorScheme": "blue"
     }
   },
