--- a/api-docs/.env.local.example
+++ b/api-docs/.env.local.example
@@ -7,3 +7,8 @@ GITHUB_SECRET=your_github_oauth_client_secret
 # Generate a secret with: openssl rand -base64 32
 NEXTAUTH_SECRET=your_nextauth_secret
 NEXTAUTH_URL=http://localhost:3000
+
+# For GitHub Enterprise (if needed)
+# GITHUB_API_BASE_URL=
+# GITHUB_AUTHORIZATION_URL=
+# GITHUB_TOKEN_URL=
