refactor to use password auth

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,19 @@ next-env.d.ts
 # logs
 logs
 *.log
+
+# terraform
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+crash.log
+crash.*.log
+*.tfvars
+!terraform.tfvars.example
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
+.terraform.lock.hcl
