--- a/api-docs/package.json
+++ b/api-docs/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "collect-specs": "ts-node scripts/collect-specs.ts"
   },
   "dependencies": {
     "@stoplight/elements": "^7.7.9",
@@ -25,6 +26,7 @@
     "eslint": "^8.45.0",
     "eslint-config-next": "^13.4.12",
     "postcss": "^8.4.27",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
 }
