--- a/api-docs/config/app-config.json
+++ b/api-docs/config/app-config.json
@@ -1,9 +1,12 @@
 {
   "features": {
     "auth": {
-      "enabled": true,
+      "enabled": false,
       "provider": "password",
-      "passwordProtected": true
+      "passwordProtected": false,
+      "apiUrl": "https://ta10k1h17i.execute-api.eu-central-1.amazonaws.com/stg/auth",
+      "tokenKey": "docs_auth_token",
+      "expiryKey": "docs_auth_expiry"
     },
     "theme": {
       "darkMode": false,
