--- a/api-docs/public/api/config.json
+++ b/api-docs/public/api/config.json
@@ -5,7 +5,7 @@
       "provider": "password",
       "passwordProtected": true,
       "apiUrl": "https://ta10k1h17i.execute-api.eu-central-1.amazonaws.com/stg/auth",
-      "tokenKey": "docs_auth_token",
+      "tokenKey": "2025authtoken",
       "expiryKey": "docs_auth_expiry"
     },
     "theme": {
