--- a/api-docs/package.json
+++ b/api-docs/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "collect-specs": "ts-node scripts/collect-specs.ts"
+    "create-sample-specs": "node scripts/create-sample-specs.js"
   },
   "dependencies": {
     "@stoplight/elements": "^7.7.9",
