--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,20 @@ on:
   push:
     branches: [main]
   
+  # Runs on pull requests to main
+  pull_request:
+    branches: [main]
+  
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        required: true
+        default: 'staging'
+        type: choice
+        options:
+          - staging
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -44,14 +56,24 @@ jobs:
           cd api-docs
           npm run create-sample-specs
       
+      - name: Determine environment
+        id: env
+        run: |
+          # Always use staging environment
+          ENVIRONMENT="staging"
+          echo "ENVIRONMENT=$ENVIRONMENT" >> $GITHUB_ENV
+          echo "Selected environment: $ENVIRONMENT"
+      
       - name: Build
         run: |
           cd api-docs
           # Extract repository name from GITHUB_REPOSITORY (owner/repo)
           REPO_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)
           echo "Building for repository: $REPO_NAME"
-          # Set the repository name as an environment variable
-          REPOSITORY_NAME=$REPO_NAME npm run build
+          # Set environment variables for the build
+          echo "Using environment: ${{ env.ENVIRONMENT }}"
+          # Set the repository name and environment as environment variables
+          REPOSITORY_NAME=$REPO_NAME APP_ENVIRONMENT=${{ env.ENVIRONMENT }} npm run build
           # export is now done automatically with output: 'export' in next.config.js
       
       - name: Setup Pages
@@ -71,6 +93,8 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
+    # Only deploy on push to main or manual workflow runs, not on PRs
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
